Add POSTGRES_NETWORK to .env.example

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ HOSTNAME=edge-pg-host-1
 #   Remote:    postgresql://user:pass@192.168.1.100:5432/prod?sslmode=require
 POSTGRES_DATA_SOURCE_NAME=postgresql://monitoring_user:password@postgres-host:5432/database?sslmode=disable
 
+# PostgreSQL Network (Optional)
+# Name of the external Docker network where PostgreSQL is running
+# Default: postgres-network
+# Example: POSTGRES_NETWORK=dispatch-network
+# POSTGRES_NETWORK=postgres-network
+
 # ============================================================================
 # Option 1: DigitalOcean VPC Setup (Recommended for DO hosts)
 # ============================================================================
