Use Dockerfiles instead of volume mounts for configs
- Add prometheus/Dockerfile (COPY prometheus.yml)
- Add promtail/Dockerfile (COPY promtail-config.yaml)
- Remove volume mounts for config files
- Fixes Portainer Git deploy mount issues
- Same approach as original working project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,9 @@ services:
       - postgres-exporter
 
   promtail:
-    image: grafana/promtail:latest
+    build:
+      context: ./promtail
+      dockerfile: Dockerfile
     container_name: monitoring-promtail
     restart: unless-stopped
     user: "0:0"
@@ -37,7 +39,6 @@ services:
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/log:/var/log:ro
       - promtail-data:/tmp
-      - ./promtail/promtail-config.yaml:/etc/promtail/promtail-config.yaml:ro
     environment:
       - HOSTNAME=${HOSTNAME:-edge-host}
       - CENTRAL_LOKI_URL=${CENTRAL_LOKI_URL}
