Add envsubst support for environment variable expansion in configs

--- a/prometheus/Dockerfile
+++ b/prometheus/Dockerfile
@@ -1,2 +1,14 @@
 FROM prom/prometheus:latest
-COPY prometheus.yml /etc/prometheus/
+
+# Install envsubst (part of gettext package)
+USER root
+RUN apk add --no-cache gettext
+
+# Copy config template and entrypoint script
+COPY prometheus.yml.template /etc/prometheus/prometheus.yml.template
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+USER nobody
+
+ENTRYPOINT ["/entrypoint.sh"]
