--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,11 @@ services:
     build:
       context: ./prometheus
       dockerfile: Dockerfile
+      args:
+        HOSTNAME: ${HOSTNAME:-edge-host}
+        CENTRAL_PROMETHEUS_URL: ${CENTRAL_PROMETHEUS_URL}
+        BASIC_AUTH_USER: ${BASIC_AUTH_USER:-}
+        BASIC_AUTH_PASSWORD: ${BASIC_AUTH_PASSWORD:-}
     container_name: monitoring-prometheus
     restart: unless-stopped
     user: "nobody"
@@ -14,11 +19,6 @@ services:
       - '--storage.tsdb.retention.time=0'  # Zero retention - pure agent mode
       - '--web.listen-address=0.0.0.0:9090'
       - '--web.enable-lifecycle'
-    environment:
-      - HOSTNAME=${HOSTNAME:-edge-host}
-      - CENTRAL_PROMETHEUS_URL=${CENTRAL_PROMETHEUS_URL}
-      - BASIC_AUTH_USER=${BASIC_AUTH_USER:-}
-      - BASIC_AUTH_PASSWORD=${BASIC_AUTH_PASSWORD:-}
     depends_on:
       - cadvisor
       - node-exporter
