--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     user: "0:0"
     networks:
       - monitoring
-    command: -config.file=/etc/promtail/promtail-config.yaml
+    # command removed - using ENTRYPOINT from Dockerfile with -config.expand-env=true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
